Fixed bugs and tests